k8s/k8s-monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-resource-ingress
  namespace: pg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "kaist-prometheus.dchain-connect.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-kube-prometheus-sta-prometheus
                port:
                  number: 9090
    - host: "kaist-grafana.dchain-connect.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-grafana
                port:
                  number: 80
